Make the notifications display at the top and full width, wrap the notification in a modal to deactive the UI to ensure that the user acknowledges the notification

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -498,3 +498,11 @@ tbody .table-subheading {
 .behind-notcatchingup{
     background:red;
 }
+#toast-container {
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    position: absolute;
+    background:rgba(0, 0, 0, 0.4);
+}
